feat: Add ML service, deployment configs, and documentation
- Add ML service with CLIP embeddings and Anthropic Claude integration
- Add deployment configurations (Render, Railway, Cloudflare Pages)
- Add comprehensive documentation (ARCHITECTURE.md, DEPLOYMENT.md, MIGRATION_SUMMARY.md)
- Update .gitignore for all services
- Add clustering service and ML client
- Update requirements and dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,21 @@ client/.vite/
 client/.next/
 client/coverage/
 
+# ML Service
+ml-service/venv/
+ml-service/env/
+ml-service/.env
+ml-service/__pycache__/
+ml-service/*.pyc
+ml-service/*.pyo
+ml-service/*.pyd
+ml-service/.Python
+ml-service/*.so
+ml-service/*.egg
+ml-service/*.egg-info/
+ml-service/.cache/
+ml-service/models/
+
 # Logs
 *.log
 logs/
