--- a/server/.env.example
+++ b/server/.env.example
@@ -6,14 +6,11 @@ DATABASE_URL=postgresql://user:password@host:port/database
 # Get your Apify token from: https://console.apify.com/
 APIFY_API_TOKEN=your_apify_token_here
 
-# Optional: Anthropic API key for AI features
-ANTHROPIC_API_KEY=your_anthropic_key_here
+# ML Service URL
+# Local: http://localhost:8001
+# Production: https://your-ml-service.railway.app
+ML_SERVICE_URL=http://localhost:8001
 
 # Security
 SECRET_KEY=your_secret_key_here
 ACCESS_TOKEN_EXPIRE_MINUTES=30
-
-# Optional: Neo4j (if used)
-# NEO4J_URI=neo4j+s://your_uri
-# NEO4J_USER=neo4j
-# NEO4J_PASSWORD=your_password
