--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,4 +7,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["python", "-m", "app.main"]
+# Используем uvicorn напрямую для лучшей стабильности
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
